--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # See https://help.github.com/ignore-files/ for more about ignoring files.
 
+# config stuff
+/src/config/firebase.json
+
 # dependencies
 /node_modules
 
